--- a/gamejamParkour/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/gamejamParkour/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -171,7 +171,7 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize",
-                "value": "{\"m_Value\":{\"x\":15.0,\"y\":1.0,\"z\":30.0}}"
+                "value": "{\"m_Value\":{\"x\":3.032320022583008,\"y\":1.0,\"z\":2.998004913330078}}"
             },
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
